<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/green_gradient">

          <!--  Header  Starts-->

          <LinearLayout
              android:id="@+id/header"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="5dip"
              android:paddingTop="5dip" >
                  <!-- Logo Start-->
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="10dip"
                      android:src="@drawable/eid_logo"
                      android:contentDescription="@string/logo" />
                  <!-- Logo Ends -->
          </LinearLayout>
          <!--  Header Ends -->

    <Button
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view" 
        android:textSize="18dip"/>
    

	<Button
        android:id="@+id/menu_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18dip" />

    <Button
        android:id="@+id/donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate" />
    
    
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
    
</LinearLayout>