<?xml version="1.0" encoding="utf-8"?>
<!-- using http://www.androidhive.info/2011/10/android-login-and-registration-screen-design/ -->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" android:background="@drawable/green_gradient">
 
          <!--  Header  Starts-->

          <LinearLayout
              android:id="@+id/header"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="5dip"
              android:paddingTop="5dip" >
                  <!-- Logo Start-->
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="10dip"
                      android:src="@drawable/eid_logo" />

                  <!-- Logo Ends -->
          </LinearLayout>
          <!--  Header Ends -->
          
         <!-- Registration Form -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">

          <EditText
              android:id="@+id/reg_username"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dip"
              android:layout_marginTop="5dip"
              android:ems="10"
              android:hint="@string/username"
              android:singleLine="true" >

              <requestFocus />
          </EditText>

          <!-- Password Label -->
          <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:singleLine="true"
                  android:layout_marginTop="5dip"
                  android:hint="@string/password"/>
          
          <EditText android:id="@+id/reg_password2"
                android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:singleLine="true"
                  android:layout_marginTop="5dip"
                  android:hint="@string/confpassword"/>
          
          
          
          <!-- Register Button -->
          <Button android:id="@+id/btnRegister"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dip"
                  android:text="@string/register"/>
          
          <!-- Link to Login Screen -->
          <TextView android:id="@+id/link_to_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                  android:text="@string/back_to_login"
                  android:gravity="center"
                  android:textSize="20dip"
                  android:textColor="#025f7c"/>
 
        </LinearLayout>
          <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>