<?xml version="1.0" encoding="utf-8"?>
<!-- using http://www.androidhive.info/2011/10/android-login-and-registration-screen-design/ -->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" android:background="@drawable/green_gradient">
 
          <!--  Header  Starts-->

          <LinearLayout
              android:id="@+id/header"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="5dip"
              android:paddingTop="5dip" >
                  <!-- Logo Start-->
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="10dip"
                      android:src="@drawable/eid_logo" />

                  <!-- Logo Ends -->
          </LinearLayout>
          <!--  Header Ends -->

          <!-- Login Form -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <!--  Email Label -->
          <EditText android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:layout_marginBottom="20dip"
                  android:singleLine="true"
                  android:id="@+id/login_username"
                  android:hint="@string/username" />
          <!--  Password Label -->
          <EditText android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:singleLine="true"
                  android:inputType="textPassword"
                  android:id="@+id/login_password"
                  android:hint="@string/password"/>          
          <!-- Login button -->
          <Button android:id="@+id/login_button"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dip"
                  android:text="@string/login"/>
          <!-- Link to Registration Screen -->
          <TextView android:id="@+id/register_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                  android:text="@string/gngregister"
                  android:gravity="center"
                  android:textSize="20dip"
                  android:textColor="#0b84aa"/>
 
        </LinearLayout>
          <!-- Login Form Ends -->
  </RelativeLayout>
</ScrollView>